{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 10,
  "lineage": "a8bf530f-7d10-35ed-d6d2-3a5a758e2575",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808039389030:vpc/vpc-48d68332",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-7eb09612",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-d920d6a3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-48d68332",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-e8548496",
            "owner_id": "808039389030",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ELB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808039389030:loadbalancer/app/terraform-asg-example/fde005aad6eb75fd",
            "arn_suffix": "app/terraform-asg-example/fde005aad6eb75fd",
            "dns_name": "terraform-asg-example-217235393.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:808039389030:loadbalancer/app/terraform-asg-example/fde005aad6eb75fd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-05efe12424af3b65c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-12b28b75"
              },
              {
                "subnet_id": "subnet-37b1797a"
              },
              {
                "subnet_id": "subnet-7114112d"
              },
              {
                "subnet_id": "subnet-96080fb8"
              },
              {
                "subnet_id": "subnet-b9ad5fb7"
              },
              {
                "subnet_id": "subnet-f6672bc8"
              }
            ],
            "subnets": [
              "subnet-12b28b75",
              "subnet-37b1797a",
              "subnet-7114112d",
              "subnet-96080fb8",
              "subnet-b9ad5fb7",
              "subnet-f6672bc8"
            ],
            "vpc_id": "vpc-48d68332",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sec-group",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808039389030:listener/app/terraform-asg-example/fde005aad6eb75fd/311e129e9f45af80",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808039389030:listener/app/terraform-asg-example/fde005aad6eb75fd/311e129e9f45af80",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:808039389030:loadbalancer/app/terraform-asg-example/fde005aad6eb75fd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ELB",
            "aws_security_group.alb-sec-group",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:808039389030:targetgroup/asg-example/7ab075c336b1650d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808039389030:listener-rule/app/terraform-asg-example/fde005aad6eb75fd/311e129e9f45af80/3fb9aeeda85e0de1",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808039389030:listener-rule/app/terraform-asg-example/fde005aad6eb75fd/311e129e9f45af80/3fb9aeeda85e0de1",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:808039389030:listener/app/terraform-asg-example/fde005aad6eb75fd/311e129e9f45af80",
            "priority": 100
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ELB",
            "aws_lb_listener.http",
            "aws_lb_target_group.asg",
            "aws_security_group.alb-sec-group",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:808039389030:targetgroup/asg-example/7ab075c336b1650d",
            "arn_suffix": "targetgroup/asg-example/7ab075c336b1650d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:808039389030:targetgroup/asg-example/7ab075c336b1650d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "asg-example",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-48d68332"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808039389030:security-group/sg-05efe12424af3b65c",
            "description": "Security Group for the ELB (ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05efe12424af3b65c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sec-group",
            "name_prefix": "",
            "owner_id": "808039389030",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-48d68332"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:808039389030:security-group/sg-0ce9f16dd9925666d",
            "description": "Security Group for the ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce9f16dd9925666d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05efe12424af3b65c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "asg_sec_group",
            "name_prefix": "",
            "owner_id": "808039389030",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "name"
            },
            "tags_all": {
              "name": "name"
            },
            "timeouts": null,
            "vpc_id": "vpc-48d68332"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sec-group"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}